Polish, a couple new messages, explored using vue-virtual-scroller but it caused issues with page scrolling even with 150 entries (took too long to load underlying components, didnt appear for a second or two)

--- a/assets/styles/_vars.scss
+++ b/assets/styles/_vars.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Coda&family=Do+Hyeon&display=swap');
-$coda: 'Coda', monospace;
+$coda: 'Coda', sans-serif;
 $do-hyeon: 'Do Hyeon', sans-serif;
 
 // == Bulma overrides ==
